Finished implementing trials; new results
Other minor last minute changes as well